# sismos

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Procfile  fetch_initial_data.sh  fly.toml  pyproject.toml  run.sh
sismos/: __init__.py  api.py  bot.py  database.py  fetch_data.py  fetch_initial_data.py  ineter.py  location.py  models.py  query.ai.txt  query.locations.ai.txt  query.sismos.ai.txt  tasks.py  whatsapp.py
tests/: test_ineter.py
