[tool.poetry]
name = "sismos"
version = "0.1.0"
description = "Sismos log de los datos de INETER"
authors = ["Igor Guerrero <igorgue@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.88.0"
twilio = "^7.15.4"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.0"
celery = "^5.2.7"
redis = "^4.4.0"
beautifulsoup4 = "^4.11.1"
httpx = "^0.23.1"
sqlalchemy = "^1.4.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
